# QRcode

./: .cmake_conf.json  CMakeLists.txt  README.md  gettb.py  main.c  make_constants.py  t
include/: qr.h  reed-solomon.h
src/: array.c  array.h  bit_stream.c  bit_stream.h  decoder.c  decoder.h  defs.h  qr.c  qr.cpp  qr.h  reed-solomon.c  reed-solomon.cpp  reed_solomon.c  reed_solomon.h  regonizer.c  regonizer.h  standard_table.h
